--- a/ibtt/templates/base.html
+++ b/ibtt/templates/base.html
@@ -3,8 +3,15 @@
 <head lang="en">
     <meta charset="UTF-8">
     {% load staticfiles %}
-    <title>{% block title %}{% endblock %}</title>
+    <title>{% block title %}爱宝天天 爱宝宝的每一天{% endblock %}</title>
+    <!-- 新 Bootstrap 核心 CSS 文件 -->
     <link href="../static/css/bootstrap.css" rel='stylesheet' type='text/css'/>
+    <link href="../static/css/bootstrap-theme.css" rel="stylesheet" type="text/css">
+    <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
+    <script src="../static/js/jquery-2.1.3.js"></script>
+    <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
+    <script src="../static/js/bootstrap.js"></script>
+
     <script data-main="../static/js/main" src="../static/js/require.js"></script>
 </head>
 <body>
