--- a/ibtt/templates/home.html
+++ b/ibtt/templates/home.html
@@ -1,9 +1,29 @@
 {% extends "base.html" %}
 
-{% block title %}爱宝天天首页{% endblock %}
-
 {% block content %}
-    <div>
-        <button class="btn btn-success">测试bootstrap</button>
-    </div>
+    <a id="skippy" class="sr-only sr-only-focusable" href="#content">
+        <div class="container"><span class="skiplink-text">Skip to main content</span></div>
+    </a>
+    <header class="navbar navbar-static-top bs-docs-nav" id="top" role="banner">
+        <div class="container">
+            <div class="navbar-header">
+                <button class="navbar-toggle collapsed" type="button" data-toggle="collapse"
+                        data-target=".bs-navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a href="../" class="navbar-brand brand">登录</a>
+                <a href="../" class="navbar-brand brand">下载</a>
+            </div>
+            <nav class="collapse navbar-collapse bs-navbar-collapse">
+              <ul class="nav navbar-nav navbar-brand brand navbar-right">
+                <a id="drop6" href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" role="button" aria-expanded="false">
+                   <span class="glyphicon glyphicon-menu-hamburger"></span>
+                </a>
+              </ul>
+            </nav>
+        </div>
+    </header>
 {% endblock %}
