--- a/ibtt/templates/base.html
+++ b/ibtt/templates/base.html
@@ -7,6 +7,7 @@
     <!-- 新 Bootstrap 核心 CSS 文件 -->
     <link href="../static/css/bootstrap.css" rel='stylesheet' type='text/css'/>
     <link href="../static/css/bootstrap-theme.css" rel="stylesheet" type="text/css">
+    <link href="../static/css/ibtt-style.css" rel="stylesheet" type="text/css">
     <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
     <script src="../static/js/jquery-2.1.3.js"></script>
     <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
@@ -21,9 +22,7 @@
     </div>
 </div>
 <div class="main">
-    <div class="container main-container">
-        {% block content %}{% endblock %}
-    </div>
+    {% block content %}{% endblock %}
 </div>
 </body>
 </html>
