--- a/ibtt/templates/home.html
+++ b/ibtt/templates/home.html
@@ -1,29 +1,45 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <a id="skippy" class="sr-only sr-only-focusable" href="#content">
-        <div class="container"><span class="skiplink-text">Skip to main content</span></div>
-    </a>
-    <header class="navbar navbar-static-top bs-docs-nav" id="top" role="banner">
-        <div class="container">
-            <div class="navbar-header">
-                <button class="navbar-toggle collapsed" type="button" data-toggle="collapse"
-                        data-target=".bs-navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a href="../" class="navbar-brand brand">登录</a>
-                <a href="../" class="navbar-brand brand">下载</a>
+    <div id="navigate-bar container">
+        <a id="skippy" class="sr-only sr-only-focusable" href="#content">
+            <div class="container"><span class="skiplink-text">Skip to main content</span></div>
+        </a>
+        <header class="navbar navbar-static-top bs-docs-nav" id="top" role="banner">
+            <div class="container">
+                <div class="navbar-header">
+                    <button class="navbar-toggle collapsed" type="button" data-toggle="collapse"
+                            data-target=".bs-navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <ul class="nav navbar-nav navbar-brand brand">
+                        <a href="../" class="btn btn-outline">登录</a>
+                        <a href="../" class="btn btn-outline">下载</a>
+                    </ul>
+                </div>
+                <nav class="collapse navbar-collapse bs-navbar-collapse">
+                    <ul class="nav navbar-nav navbar-brand brand navbar-right">
+                        <a id="drop6" href="#" class="dropdown-toggle btn btn-outline" data-toggle="dropdown"
+                           aria-haspopup="true" role="button" aria-expanded="false">
+                            功能 <span class="glyphicon glyphicon-menu-hamburger"></span>
+                        </a>
+                    </ul>
+                </nav>
             </div>
-            <nav class="collapse navbar-collapse bs-navbar-collapse">
-              <ul class="nav navbar-nav navbar-brand brand navbar-right">
-                <a id="drop6" href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" role="button" aria-expanded="false">
-                   <span class="glyphicon glyphicon-menu-hamburger"></span>
-                </a>
-              </ul>
-            </nav>
+        </header>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div id="container" class="col-md-10 btn btn-outline">.col-md-1</div>
+            <div class="col-md-1"></div>
         </div>
-    </header>
+
+    </div>
+
+    <a id="scrollUp" href="#top" style="position: fixed; z-index: 2147483647; display: block;"><i class="fa fa-angle-up"></i></a>
 {% endblock %}
