--- a/ibtt/templates/base.html
+++ b/ibtt/templates/base.html
@@ -7,13 +7,14 @@
     <!-- 新 Bootstrap 核心 CSS 文件 -->
     <link href="../static/css/bootstrap.css" rel='stylesheet' type='text/css'/>
     <link href="../static/css/bootstrap-theme.css" rel="stylesheet" type="text/css">
+    <link href="../static/css/bootstrap-responsive.css" rel="stylesheet" type="text/css">
+    <link href="../static/css/lightbox.css" rel="stylesheet" type="text/css">
     <link href="../static/css/ibtt-style.css" rel="stylesheet" type="text/css">
-    <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
+    {% block stylesheet %}{% endblock %}
+    {#    <script src="../static/js/require.config.js"></script>#}
     <script src="../static/js/jquery-2.1.3.js"></script>
-    <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
     <script src="../static/js/bootstrap.js"></script>
-
-    <script data-main="../static/js/main" src="../static/js/require.js"></script>
+    {% block script %}{% endblock %}
 </head>
 <body>
 <div>
