--- a/ibtt/static/css/ibtt-style.css
+++ b/ibtt/static/css/ibtt-style.css
@@ -1,3 +1,7 @@
+.content-right {
+    padding: 15px;
+    text-align: right;
+}
 .btn-outline {
     color: #8EAB52;
     background-color: transparent;
