登录窗口ajax调用完善;添加校验框架

--- a/ibtt/templates/home.html
+++ b/ibtt/templates/home.html
@@ -33,7 +33,7 @@
                         {#                            sagittis lacus vel augue laoreet rutrum faucibus.">#}
                         {#                              Popover on bottom#}
                         {#                        </button>#}
-                        <a id="login_btn" href="#" class="btn btn-outline" data-toggle="modal"
+                        <a href="#" class="btn btn-outline" data-toggle="modal"
                            data-target="#loginModal">登录</a>
                         <a href="../" class="btn btn-outline">注册</a>
                         <a id="drop6" href="#" class="dropdown-toggle btn btn-outline" data-toggle="dropdown"
