--- a/ibtt/templates/login.html
+++ b/ibtt/templates/login.html
@@ -7,26 +7,33 @@
                 <h4 class="modal-title" id="myModalLabel">登陆</h4>
             </div>
             <div class="modal-body">
-                <form class="form-signin">
-                    <h2 class="form-signin-heading">登录爱宝天天</h2>
-                    <label for="inputEmail" class="sr-only">Email address</label>
-                    <input type="email" id="inputEmail" class="form-control" placeholder="手机/邮箱/用户名" required
-                           autofocus>
-                    <label for="inputPassword" class="sr-only">Password</label>
-                    <input type="password" id="inputPassword" class="form-control" placeholder="密码" required>
-
+                <form class="form-signin" id="login_form">
+                    <h2 class="form-signin-heading">爱宝天天</h2>
+                    <div class="control-group input-append">
+                        <input type="text" id="username" name="username" class="form-control" placeholder="手机/邮箱/用户名"
+                               data-required autofocus>
+                        <label for="username" class="add-on"><span class="icon-asterisk"></span></label>
+                    </div>
+                    <div class="control-group input-append">
+                    <input type="password" id="password" password="password" class="form-control" placeholder="密码"
+                           data-required>
+                        <label for="password" class="add-on"><span class="icon-asterisk"></span></label>
+                    </div>
                     <div class="checkbox">
                         <label>
                             <input type="checkbox" value="remember-me">自动登录
                         </label>
                     </div>
                     <div class="content-right">
-                        <button class="btn btn-outline" type="submit">登录</button>
+                        <button class="btn btn-outline" id="login_btn" type="submit">登录</button>
                         <button class="btn btn-outline" data-dismiss="modal">取消</button>
                     </div>
                 </form>
             </div>
-
         </div>
+        <script src="../static/js/jquery-validate.js" type="text/javascript"></script>
+        <script src="../static/js/login.js" type="text/javascript"></script>
+        <script src="../static/js/jquery.form.js" type="text/javascript"></script>
+
     </div>
 </div>
