首页完善,登录完善,我的首页添加

--- a/ibtt/static/css/ibtt-style.css
+++ b/ibtt/static/css/ibtt-style.css
@@ -71,3 +71,11 @@
 .lightbox .lb-image {
     max-width: none;
 }
+
+.navbar-task {
+  float: left;
+  height: 50px;
+  padding: 8px 8px;
+  font-size: 18px;
+  line-height: 20px;
+}
