--- a/ibtt/templates/base.html
+++ b/ibtt/templates/base.html
@@ -10,22 +10,37 @@
     <link href="../static/css/bootstrap-responsive.css" rel="stylesheet" type="text/css">
     <link href="../static/css/lightbox.css" rel="stylesheet" type="text/css">
     <link href="../static/css/ibtt-style.css" rel="stylesheet" type="text/css">
+    <link href="../static/css/bootstrap-extend.css" rel="stylesheet" type="text/css">
+    <link href="../static/css/animate.css" rel="stylesheet" type="text/css">
+    <style>
+        .headroom {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            transition: all .2s ease-in-out;
+        }
+
+        .headroom--unpinned {
+            top: -100px;
+        }
+
+        .headroom--pinned {
+            top: 0;
+        }
+    </style>
+
     {% block stylesheet %}{% endblock %}
     {#    <script src="../static/js/require.config.js"></script>#}
     <script src="../static/js/jquery-2.1.3.js"></script>
     <script src="../static/js/bootstrap.js"></script>
+    <script src="../static/js/headroom.js"></script>
+    <script src="../static/js/jQuery.headroom.min.js"></script>
     {% block script %}{% endblock %}
 </head>
 <body>
-<div>
-    <div class="container">
-        {% block navbar %}{% endblock %}
-    </div>
-</div>
-<div class="main">
-    {% block content %}{% endblock %}
-</div>
-
+{% block navbar %}{% endblock %}
+{% block content %}{% endblock %}
 {% block others %}{% endblock %}
 </body>
 </html>
