--- a/ibtt/templates/login.html
+++ b/ibtt/templates/login.html
@@ -1,5 +1,5 @@
 <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-sm">
+    <div class="modal-dialog modal-md">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
@@ -8,16 +8,15 @@
             </div>
             <div class="modal-body">
                 <form class="form-signin" id="login_form">
+                    {% csrf_token %}
                     <h2 class="form-signin-heading">爱宝天天</h2>
                     <div class="control-group input-append">
                         <input type="text" id="username" name="username" class="form-control" placeholder="手机/邮箱/用户名"
                                data-required autofocus>
-                        <label for="username" class="add-on"><span class="icon-asterisk"></span></label>
                     </div>
                     <div class="control-group input-append">
-                    <input type="password" id="password" password="password" class="form-control" placeholder="密码"
+                    <input type="password" id="password" name="password" class="form-control" placeholder="密码"
                            data-required>
-                        <label for="password" class="add-on"><span class="icon-asterisk"></span></label>
                     </div>
                     <div class="checkbox">
                         <label>
@@ -34,6 +33,5 @@
         <script src="../static/js/jquery-validate.js" type="text/javascript"></script>
         <script src="../static/js/login.js" type="text/javascript"></script>
         <script src="../static/js/jquery.form.js" type="text/javascript"></script>
-
     </div>
 </div>
