--- a/ibtt/templates/home.html
+++ b/ibtt/templates/home.html
@@ -7,6 +7,10 @@
     <script src="../static/js/home.js"></script>
 {% endblock %}
 
+{% block others %}
+    {% include "login.html" %}
+    {% include "register.html" %}
+{% endblock %}
 {% block navbar %}
     <head>
         <div id="navigate-bar">
@@ -14,135 +18,88 @@
                 <div class="container">
                     <nav class="collapse navbar-collapse">
                         <ul class="nav navbar-nav navbar-task navbar-right">
-{#                            <button type="button" class="btn btn-default" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Vivamus#}
-{#                                sagittis lacus vel augue laoreet rutrum faucibus.">#}
-{#                                  Popover on bottom#}
-{#                            </button>#}
+                            {#                            <button type="button" class="btn btn-default" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Vivamus#}
+                            {#                                sagittis lacus vel augue laoreet rutrum faucibus.">#}
+                            {#                                  Popover on bottom#}
+                            {#                            </button>#}
                             <a href="#" class="btn btn-outline" data-toggle="modal"
                                data-target="#loginModal">登录</a>
-                            <a href="../" class="btn btn-outline">注册</a>
+                            <a href="#" class="btn btn-outline" data-toggle="modal"
+                               data-target="#registerModal">注册</a>
                             <a id="drop6" href="#" class="dropdown-toggle btn btn-outline" data-toggle="dropdown"
                                aria-haspopup="true" role="button" aria-expanded="false">
                                 功能 <span class="glyphicon glyphicon-menu-hamburger"></span>
                             </a>
-                            {% include "login.html" %}
                         </ul>
                     </nav>
                 </div>
             </header>
         </div>
     </head>
-    <div id="carousel-example-generic" class="carousel slide" style="height: 360px;background-color: #83A047; width:auto;" data-ride="carousel">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
-            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="0" class=""></li>
+            <li data-target="#myCarousel" data-slide-to="1" class=""></li>
+            <li data-target="#myCarousel" data-slide-to="2" class="active"></li>
         </ol>
-
-        <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
-            <div class="item active">
-                <img src="" alt="..." style="background-color: #83A047;">
+            <div class="item">
+                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+                     alt="First slide">
 
-                <div class="carousel-caption" style="background-color: #83A047;">
-                    <h1>爱宝天天</h1>
+                <div class="container">
+                    <div class="carousel-caption">
+                        <h1>Example headline.</h1>
+
+                        <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous"
+                            Glyphicon buttons on the left and right might not load/display properly due to web browser
+                            security rules.</p>
+
+                        <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+                    </div>
                 </div>
             </div>
             <div class="item">
-                <img src="" alt="..." style="background-color: #9BB85F">
+                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAGZmZgAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+                     alt="Second slide">
 
-                <div class="carousel-caption"  style="background-color: #9BB85F">
-                    <h2>爱宝宝的每一天</h2>
+                <div class="container">
+                    <div class="carousel-caption">
+                        <h1>Another example headline.</h1>
+
+                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta
+                            gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+
+                        <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="item active">
+                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAFVVVQAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+                     alt="Third slide">
+
+                <div class="container">
+                    <div class="carousel-caption">
+                        <h1>One more for good measure.</h1>
+
+                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta
+                            gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+
+                        <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+                    </div>
                 </div>
             </div>
         </div>
-
-        <!-- Controls -->
-        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
         </a>
-        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
     </div>
-
-
-
-
-
-    <!-- Carousel
-           ================================================== -->
-    {#            <div id="myCarousel" class="carousel slide" style="height: 500px;" data-ride="carousel">#}
-    {#                <!-- Indicators -->#}
-    {#                <ol class="carousel-indicators">#}
-    {#                    <li data-target="#myCarousel" data-slide-to="0" class=""></li>#}
-    {#                    <li data-target="#myCarousel" data-slide-to="1" class="active"></li>#}
-    {#                    <li data-target="#myCarousel" data-slide-to="2" class=""></li>#}
-    {#                </ol>#}
-    {#                <div class="carousel-inner" role="listbox">#}
-    {#                    <div class="item">#}
-    {#                        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="#}
-    {#                             alt="First slide">#}
-    {#                        <div class="container">#}
-    {#                            <div class="carousel-caption">#}
-    {#                                <h1>Example headline.</h1>#}
-    {##}
-    {#                                <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and#}
-    {#                                    "previous" Glyphicon buttons on the left and right might not load/display properly#}
-    {#                                    due to web browser security rules.</p>#}
-    {##}
-    {#                                <p><a class="btn btn-lg btn-primary" role="button">Sign up today</a></p>#}
-    {#                            </div>#}
-    {#                        </div>#}
-    {#                    </div>#}
-    {#                    <div class="item active">#}
-    {#                        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAGZmZgAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="#}
-    {#                             alt="Second slide">#}
-    {#                        <div class="container">#}
-    {#                            <div class="carousel-caption">#}
-    {#                                <h1>Another example headline.</h1>#}
-    {##}
-    {#                                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi#}
-    {#                                    porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id#}
-    {#                                    elit.</p>#}
-    {##}
-    {#                                <p><a class="btn btn-lg btn-primary" role="button">Learn more</a></p>#}
-    {#                            </div>#}
-    {#                        </div>#}
-    {#                    </div>#}
-    {#                    <div class="item">#}
-    {#                        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAFVVVQAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="#}
-    {#                             alt="Third slide">#}
-    {#                        <div class="container">#}
-    {#                            <div class="carousel-caption">#}
-    {#                                <h1>One more for good measure.</h1>#}
-    {##}
-    {#                                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi#}
-    {#                                    porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id#}
-    {#                                    elit.</p>#}
-    {##}
-    {#                                <p><a class="btn btn-lg btn-primary" role="button">Browse gallery</a></p>#}
-    {#                            </div>#}
-    {#                        </div>#}
-    {#                    </div>#}
-    {#                </div>#}
-    {#                <a class="left carousel-control"#}
-    {#                   href="./Carousel Template for Bootstrap_files/Carousel Template for Bootstrap.html" role="button"#}
-    {#                   data-slide="prev">#}
-    {#                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>#}
-    {#                    <span class="sr-only">Previous</span>#}
-    {#                </a>#}
-    {#                <a class="right carousel-control"#}
-    {#                   href="./Carousel Template for Bootstrap_files/Carousel Template for Bootstrap.html" role="button"#}
-    {#                   data-slide="next">#}
-    {#                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>#}
-    {#                    <span class="sr-only">Next</span>#}
-    {#                </a>#}
-    {#            </div>#}
-    <!-- /.carousel -->
 {% endblock %}
 {% block content %}
     <div class="container-fluid">
