modal页面优化,base-modal页面提炼

--- a/ibtt/templates/home.html
+++ b/ibtt/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block script %}
+{% block base-script %}
     <script src="../static/js/masonry.pkgd.min.js"></script>
     <script src="../static/js/imagesloaded.pkgd.min.js"></script>
     <script src="../static/js/lightbox.min.js"></script>
@@ -25,7 +25,7 @@
                             <a href="#" class="btn btn-outline" data-toggle="modal"
                                data-target="#loginModal">登录</a>
                             <a href="#" class="btn btn-outline" data-toggle="modal"
-                               data-target="#registerModal">注册</a>
+                               data-target="#register-modal">注册</a>
                             <a id="drop6" href="#" class="dropdown-toggle btn btn-outline" data-toggle="dropdown"
                                aria-haspopup="true" role="button" aria-expanded="false">
                                 功能 <span class="glyphicon glyphicon-menu-hamburger"></span>
