--- a/ibtt/templates/my-home.html
+++ b/ibtt/templates/my-home.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block script %}
+{% block base-script %}
     <script src="../static/js/masonry.pkgd.min.js"></script>
     <script src="../static/js/imagesloaded.pkgd.min.js"></script>
     <script src="../static/js/lightbox.min.js"></script>
