--- a/ibtt/templates/base.html
+++ b/ibtt/templates/base.html
@@ -36,7 +36,7 @@
     <script src="../static/js/bootstrap.js"></script>
     <script src="../static/js/headroom.js"></script>
     <script src="../static/js/jQuery.headroom.min.js"></script>
-    {% block script %}{% endblock %}
+    {% block base-script %}{% endblock %}
 </head>
 <body>
 {% block navbar %}{% endblock %}
